--- a/css/style.css
+++ b/css/style.css
@@ -1110,10 +1110,17 @@ td:first-child {
  display: grid;
  align-items: center; 
  grid-template-columns: 1fr 1fr 1fr;
- column-gap: 5px;
+ column-gap: 4px;
 }
 
 .gif{
   max-width: 100%;
   max-height:100%;
 }
+
+.tile__img {
+	max-width: 50%;
+	text-align: center;
+	height: auto;
+	object-fit: cover;
+  }
