--- a/css/style.css
+++ b/css/style.css
@@ -1146,3 +1146,67 @@ td:first-child {
 	height: auto;
 	object-fit: cover;
   }
+@media only screen and (max-width: 768px) {
+
+	.video-container {
+		overflow: hidden;
+		position: relative;
+		width:100%;
+	}
+	
+	.video-container::after {
+		padding-top: 56.25%;
+		display: block;
+		content: '';
+	}
+	
+	.video-container iframe {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+	}
+
+	.block{
+	width: 90px;
+	height: 80px;
+	/* display: grid; */
+	font-size: 16px;
+	}
+
+  }
+
+
+
+  @media only screen and (max-width: 400px) {
+
+	.video-container {
+		overflow: hidden;
+		position: relative;
+		width:100%;
+	}
+	
+	.video-container::after {
+		padding-top: 56.25%;
+		display: block;
+		content: '';
+	}
+	
+	.video-container iframe {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+	}
+
+	.block{
+	width: 75px;
+	height: 65px;
+	/* display: grid; */
+	
+	font-size: 12px;
+	}
+
+  }
