--- a/css/style.css
+++ b/css/style.css
@@ -1151,7 +1151,9 @@ td:first-child {
 	.video-container {
 		overflow: hidden;
 		position: relative;
-		width:100%;
+		max-width: fit-content;
+  		margin-left: auto;
+  		margin-right: auto;
 	}
 	
 	.video-container::after {
@@ -1184,7 +1186,9 @@ td:first-child {
 	.video-container {
 		overflow: hidden;
 		position: relative;
-		width:100%;
+		max-width: fit-content;
+  		margin-left: auto;
+  		margin-right: auto;	
 	}
 	
 	.video-container::after {
